@startuml DiagramaFinal
class Coordenada {
  - x: int
  - y: int
  + Coordenada(x: int, y: int)
  + getX(): int
  + getY(): int
}

class Pixel {
  - color: int
  - caracter: char
  + Pixel(color: int, caracter: char)
  + getColor(): int
  + getCaracter(): char
}

class Frame {
  - anchura: int
  - altura: int
  - pixels: Pixel[][]
  + Frame(anchura: int, altura: int)
  + borrarTodo(): void
  + borrar(coordenada: Coordenada): void
  + establecerPixel(coordenada: Coordenada, pixel: Pixel): void
  + validarCoordenada(coordenada: Coordenada): boolean
  + renderizar(): void
  + getPixels(): Pixel[][]
  + getPixel(coordenada: Coordenada): Pixel
}
Frame ..> Pixel
Frame ..> Coordenada

class Escena {
  - indiceActual: int
  - frames: Frame[]
  + Escena(anchura: int, altura: int, numeroFrames: int)
  + siguiente(): void
  + getFrame(): Frame
  + getFrame(indice: int): Frame
  + numeroFrames(): int
}

Escena  ..> Frame
class PantallaEntrelazada {
  - ancho: int
  - alto: int
  - escena: Escena
  + PantallaEntrelazada(ancho: int, alto: int)
  + renderizar(): void
  + getEscena(): Escena
}

PantallaEntrelazada --> Escena

@enduml